--- a/MainProgram/Lazarus/AppKiller.lpi
+++ b/MainProgram/Lazarus/AppKiller.lpi
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <CONFIG>
   <ProjectOptions>
-    <Version Value="9"/>
+    <Version Value="10"/>
     <PathDelim Value="\"/>
     <General>
       <SessionStorage Value="InProjectDir"/>
@@ -9,6 +9,9 @@
       <Title Value="AppKiller"/>
       <ResourceType Value="res"/>
       <UseXPManifest Value="True"/>
+      <XPManifest>
+        <ExecutionLevel Value="requireAdministrator"/>
+      </XPManifest>
       <Icon Value="0"/>
     </General>
     <i18n>
@@ -18,9 +21,10 @@
       <UseVersionInfo Value="True"/>
       <AutoIncrementBuild Value="True"/>
       <MajorVersionNr Value="3"/>
-      <BuildNr Value="28"/>
+      <RevisionNr Value="1"/>
+      <BuildNr Value="33"/>
       <Language Value="0405"/>
-      <StringTable Comments="Main program of AppKiller 3.x" CompanyName="František Milt" FileDescription="Application Killer" InternalName="AppKiller" LegalCopyright="© 2010 - 2016 František Milt" LegalTrademarks="AppKiller" OriginalFilename="AppKiller.exe" ProductName="AppKiller 3" ProductVersion="3.0.0"/>
+      <StringTable Comments="Main program of AppKiller 3.x" CompanyName="František Milt" FileDescription="Application Killer" InternalName="AppKiller" LegalCopyright="© 2010 - 2017 František Milt" LegalTrademarks="AppKiller" OriginalFilename="AppKiller.exe" ProductName="AppKiller 3" ProductVersion="3.0.1"/>
     </VersionInfo>
     <BuildModes Count="4">
       <Item1 Name="Debug_win_x86" Default="True"/>
@@ -168,59 +172,59 @@
         <IsPartOfProject Value="True"/>
       </Unit0>
       <Unit1>
-        <Filename Value="MainForm.pas"/>
+        <Filename Value="..\Source\APK_InstanceControl.pas"/>
         <IsPartOfProject Value="True"/>
-        <ComponentName Value="fMainForm"/>
-        <HasResources Value="True"/>
-        <ResourceBaseClass Value="Form"/>
       </Unit1>
       <Unit2>
-        <Filename Value="..\Source\APK_InstanceControl.pas"/>
+        <Filename Value="..\Source\APK_Strings.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit2>
       <Unit3>
-        <Filename Value="..\Source\APK_Strings.pas"/>
+        <Filename Value="..\Source\APK_Keyboard.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit3>
       <Unit4>
-        <Filename Value="..\Source\APK_Keyboard.pas"/>
+        <Filename Value="..\Source\APK_Manager.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit4>
       <Unit5>
-        <Filename Value="..\Source\APK_Manager.pas"/>
+        <Filename Value="..\Source\APK_ProcEnum.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit5>
       <Unit6>
-        <Filename Value="..\Source\APK_ProcEnum.pas"/>
+        <Filename Value="..\Source\APK_Settings.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit6>
       <Unit7>
-        <Filename Value="..\Source\APK_Settings.pas"/>
+        <Filename Value="..\Source\APK_System.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit7>
       <Unit8>
-        <Filename Value="..\Source\APK_System.pas"/>
+        <Filename Value="..\Source\APK_Terminator.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit8>
       <Unit9>
-        <Filename Value="..\Source\APK_Terminator.pas"/>
+        <Filename Value="..\Source\APK_TrayIcon.pas"/>
         <IsPartOfProject Value="True"/>
       </Unit9>
       <Unit10>
-        <Filename Value="..\Source\APK_TrayIcon.pas"/>
-        <IsPartOfProject Value="True"/>
-      </Unit10>
-      <Unit11>
         <Filename Value="..\AddProcForm.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="fAddProcForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
-      </Unit11>
-      <Unit12>
+      </Unit10>
+      <Unit11>
         <Filename Value="..\ShortcutForm.pas"/>
         <IsPartOfProject Value="True"/>
         <ComponentName Value="fShortcutForm"/>
+        <HasResources Value="True"/>
+        <ResourceBaseClass Value="Form"/>
+      </Unit11>
+      <Unit12>
+        <Filename Value="..\MainForm.pas"/>
+        <IsPartOfProject Value="True"/>
+        <ComponentName Value="fMainForm"/>
         <HasResources Value="True"/>
         <ResourceBaseClass Value="Form"/>
       </Unit12>
